--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ API_URL="https://api.uptimerobot.com/v2/"
 # UptimeRobot Api Keys - required
 ## This project only requires Read-only API key
 ## https://dashboard.uptimerobot.com/integrations
-API_KEY=""
+API_KEY="ur2458399-1cbc8044e8c0f26a47414656"
 
 # Deployment platform - required
 ## cloudflare ( default ) | auto
@@ -14,7 +14,7 @@ API_KEY=""
 DEPLOYMENT_PLATFORM="cloudflare"
 
 # Site Title
-SITE_TITLE="IMSYY 站点监测"
+SITE_TITLE="Xlencoの站点监测"
 
 # Site Description 
 SITE_DESCRIPTION="一个简约的站点监测 | a simple site-status pages, power by uptimerobot"
